Comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 01</p>
+            <h2>Curso com HTML5 e CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tenetur voluptatum modi quaerat quasi, alias, reiciendis officiis iure, dicta eaque velit pariatur saepe eligendi dolores. Quo laborum voluptatum dolorum nesciunt!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do artig 002</p>
+            <h2>Curso de Javascript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ut voluptate pariatur, cupiditate fuga illo itaque at minima architecto? Reiciendis est vero provident incidunt, similique sed nemo a nihil quod.</p>
         </article>
     </main>
 
