--- a/index.html
+++ b/index.html
@@ -12,14 +12,21 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Video">
         </header>
         <article>
             <h2>Curso com HTML5 e CSS3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tenetur voluptatum modi quaerat quasi, alias, reiciendis officiis iure, dicta eaque velit pariatur saepe eligendi dolores. Quo laborum voluptatum dolorum nesciunt!</p>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>,
+                criamos as configurações visuais que um site vai ter.</p>
+            <p><a href="curso-html.html">Acesse o Curso de HTML</a></p>
         </article>
         <article>
             <h2>Curso de Javascript</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ut voluptate pariatur, cupiditate fuga illo itaque at minima architecto? Reiciendis est vero provident incidunt, similique sed nemo a nihil quod.</p>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
+            <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do
+                <abbr title="Document Object Model">DOM</abbr>.</p>
+            <p><a href="curso-js.html">Acesso o Curso de JavaScript</a></p>
         </article>
     </main>
 
