Adicionado video curso HTML

--- a/curso-html.html
+++ b/curso-html.html
@@ -18,6 +18,7 @@
                 criamos as configurações visuais que um site vai ter.</p>
 
             <iframe width="560" height="315" src="https://www.youtube.com/embed/epDCjksKMok" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/riSVzwlSnhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
             <a href="index.html"><img src="imagens/btn-back.png" alt="Voltar"></a>
 
